src/test/deca/syntax/invalid/our_synt_tests/robin-test9-consecInst.deca
// Error: trying many consecutive instructions not separated with commas.

{
float a, b, c;
println(a b c);
}
